--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.2
+  cached_network_image: ^3.3.0
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.17
   equatable: ^2.0.5
@@ -38,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_secure_storage: ^9.0.0
   http: ^1.1.0
+  image_network: ^2.5.4+1
   image_picker: ^1.0.4
   lottie: ^2.6.0
 
